src/objects/Campaign_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>gfsurveys__ContactGroup__c</referenceTo>
        <relationshipLabel>Campaign Enrollments</relationshipLabel>
        <relationshipName>Message_Campaign_Group_Associations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MessageCampaign__c</fullName>
        <label>MessageCampaign</label>
        <referenceTo>MessageCampaign__c</referenceTo>
        <relationshipLabel>Campaign Enrollments</relationshipLabel>
        <relationshipName>Message_Campaign_Group_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>The reference date determines the calendar date that the campaign will begin for this enrollment</inlineHelpText>
        <label>Reference Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Campaign Enrollment</label>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Campaign Enrollment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>